fixed unordered list!

--- a/recipes/tandoori-chicken.html
+++ b/recipes/tandoori-chicken.html
@@ -15,9 +15,9 @@
         <h2>Ingredients</h2>
 
         <ul>
-            <l1>2 pounds chicken, cut into pieces</l1>
+            <li>2 pounds chicken, cut into pieces</li>
             <li>1 medium lemon, juiced</li>
-            <l1>1 teaspoon salt</l1>
+            <li>1 teaspoon salt</li>
             <li>1 ¼ cups plain yogurt</li>
             <li>½ medium onion, finely chopped</li>
             <li>1 clove garlic, minced</li>
